@@ -1,5 +1,7 @@
 
 Version 0.8	- xx August 2001
+  * Add -J/maxargs to warn when using too many arguments
+  * Add -K/maxlocals to warn when using too many local variables
   * Add -D/intdivide to warn when using integer division
   * Add -O/objattrs to warn when using object.attribute that doesn't exist
   * Add -M/reimportself to warn when a module imports itself
